# sporksircd

./: CREDITS  ChangeLog  FAQ  INSTALL  LICENSE  Makefile.am  Makefile.in  Mercurial-Access  NEWS  README.FIRST  TODO  UPGRADING  acinclude.m4  aclocal.m4  configure  configure.ac  install-mod.sh.in  main.c
bandb/: Makefile.in  bantool.c
bandb/sqlite3/: Makefile.am  Makefile.in
doc/: Makefile.in  STYLE  example.conf  reference.conf
doc/latex/: SporksIRCD.tex  cmodes.tex  commands.tex  config.tex  extensions.tex  intro.tex  oprivs.tex  ucommands.tex  umodes.tex  upgrading.tex
doc/technical/: capab.txt  event.txt  modesupport.txt  ts6-protocol.txt
extensions/: Makefile.am  Makefile.in  README  chm_adminonly.c  chm_blockcaps.c  chm_censor.c  chm_censor_operonly.c  chm_nocolour.c  chm_noctcp.c  chm_nonotices.c  chm_norepeat.c  chm_operonly.c  chm_operonly_compat.c  chm_quietunreg_compat.c  chm_sslonly.c  chm_sslonly_compat.c  createauthonly.c  createoperonly.c  example_module.c  extb_account.c  extb_canjoin.c  extb_channel.c  extb_extgecos.c  extb_oper.c  extb_realname.c  extb_server.c  extb_ssl.c  force_user_invis.c  hurt.c  m_adminwall.c  m_chgflags.c  m_cycle.c  m_findforwards.c  m_forcejoin.c  m_forcenick.c  m_forcepart.c  m_identify.c  m_oaccept.c  m_ojoin.c  m_okick.c  (+24 more)
help/: Makefile.am  Makefile.in
help/opers/: operspy
include/: blacklist.h  cache.h  channel.h  chmode.h  client.h  common.h  hash.h  hook.h  hostmask.h  ircd.h  ircd_defs.h  list.h  m_info.h  match.h  modules.h  packet.h  parse.h  patchlevel.h  privilege.h  reslib.h  s_conf.h  s_newconf.h  s_serv.h  s_user.h  setup.h.in  stdinc.h  supported.h
include/inline/: stringops.h
libltdl/: Makefile.in  aclocal.m4
libratbox/: Makefile.in  acinclude.m4  aclocal.m4  configure  configure.ac
libratbox/include/: getaddrinfo.h  getnameinfo.h  libratbox_config.h.in  ratbox_lib.h  rb_dictionary.h  rb_endian.h  rb_patricia.h
libratbox/src/: Makefile.am  Makefile.in  commio.c  crypt.c  devpoll.c  dictionary.c  export-syms.txt  getaddrinfo.c  getnameinfo.c  patricia.c
modules/: Makefile.am  Makefile.in  m_accept.c  m_admin.c  m_away.c  m_cap.c  m_capab.c  m_certfp.c  m_challenge.c  m_chghost.c  m_close.c  m_cmessage.c  m_connect.c  m_dline.c  m_encap.c  m_etrace.c  m_grant.c  m_help.c  m_info.c  m_invite.c  m_ison.c  m_kline.c  m_knock.c  m_links.c  m_list.c  m_locops.c  m_lusers.c  m_map.c  m_monitor.c  m_motd.c  m_ms.c  m_names.c  m_oper.c  m_operspy.c  m_pass.c  m_ping.c  m_pong.c  m_post.c  m_rehash.c  m_restart.c  (+27 more)
modules/core/: m_ban.c  m_die.c  m_error.c  m_join.c  m_kick.c  m_kill.c  m_message.c  m_metadata.c  m_mode.c  m_nick.c  m_part.c  m_quit.c  m_server.c  m_squit.c
patches/: README  sporksircd-atheme.patch
src/: Makefile.am  Makefile.in  bandbi.c  blacklist.c  cache.c  channel.c  chmode.c  class.c  client.c  extban.c  getopt.c  hash.c  hook.c  hostmask.c  ircd.c  ircd_lexer.c  ircd_lexer.l  ircd_parser.c  ircd_parser.h  ircd_parser.y  ircd_signal.c  list.c  listener.c  logger.c  match.c  messages.tab  modules.c  monitor.c  newconf.c  packet.c  parse.c  privilege.c  reject.c  res.c  reslib.c  restart.c  s_auth.c  s_conf.c  s_newconf.c  s_serv.c  (+10 more)
ssld/: Makefile.am  Makefile.in
testsuite/: ircd.conf.1  ircd.conf.2  ircd.conf.3
tools/: Makefile.am  Makefile.in  README
tools/respond/: challenge.txt  makekeypair
tools/respond/client-scripts/: README  challenge-epic4.irc  challenge-epic5.irc  challenge-irssi.pl  challenge-xchat.pl
tools/respond/ratbox-respond/: README  configure  configure.ac  install-sh  ratbox-respond.c  setup.h.in
unsupported/: Makefile.am  Makefile.in  hints.c  m_clearchan.c  m_forcequit.c
